# kubevirt-ui-mcp

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/ci_triage/tools/: allure.rs  classify.rs  jenkins.rs  junit.rs  mod.rs
src/cluster_inspector/: kube_client.rs  mod.rs
src/cluster_inspector/tools/: inventory.rs  mod.rs  resources.rs
src/context/: indexer.rs  mod.rs  watcher.rs
src/context/tools/: context.rs  mod.rs  patterns.rs  search.rs  surface.rs
src/coverage/: cluster.rs  github.rs  mod.rs  oracle.rs  runner.rs  scaffolder.rs  scanner.rs  tools.rs
src/docs/: asciidoc.rs  cache.rs  fetcher.rs  index.rs  mod.rs  tools.rs
src/linter/tools/: fixtures.rs  lint.rs  mod.rs  parity.rs  rules.rs
src/mcp/: protocol.rs
src/memory/: config.rs  github.rs  jira.rs  mod.rs  store.rs  tools.rs
src/oc/tools/: mod.rs  oc.rs  virtctl.rs
src/spec/tools/: handlers.rs  markdown.rs  mod.rs  parser.rs  std_docs.rs
